--- a/chromium/map.jinja
+++ b/chromium/map.jinja
@@ -3,13 +3,13 @@
 
 {%- set tplroot = tpldir.split('/')[0] %}
 {%- import_yaml tplroot ~ "/defaults.yaml" as default_settings %}
-{%- import_yaml tplroot ~ "/osfamilymap.yaml" as osfamilymap %}
+{%- import_yaml tplroot ~ "/osmap.yaml" as osmap %}
 
 {%- set _config = salt['config.get'](tplroot, default={}) %}
 {%- set defaults = salt['grains.filter_by'](
       default_settings,
       default=tplroot,
-      merge=salt['grains.filter_by']( osfamilymap, grain='os_family',
+      merge=salt['grains.filter_by']( osmap, grain='os',
         merge=salt['grains.filter_by']( _config, default='lookup'
         )
       )
